--- a/netflow.yml
+++ b/netflow.yml
@@ -7,30 +7,21 @@
     var:
       netflow_host: 0.0.0.0
       netflow_port: 2055
+      # internal_networks specifies which networks are considered internal or private
+      # you can specify either a CIDR block or any of the special named ranges listed
+      # at: https://www.elastic.co/guide/en/beats/filebeat/current/defining-processors.html#condition-network
       internal_networks:
         - private
-  input:
-    queue:
-      mem:
-        events: 4096          # Naikkan buffer mem untuk burst traffic
-        flush.min_events: 512
-        flush.timeout: 5s
-
-    processors:
-      - add_locale:
-          format: offset      # Tambahkan info timezone di log
-      - add_fields:
-          target: ''
-          fields:
-            timezone: "Asia/Jakarta"
-      - script:
-          lang: javascript
-          file: /etc/filebeat/netflow-mod-ip.js
-      - dns:
-          type: reverse
-          fields:
-            source.ip: source.domain
-            destination.ip: destination.domain
-      - script:
-          lang: javascript
-          file: /etc/filebeat/netflow-mod-domain.js
+    input:
+      processors:
+        - script:
+            lang: javascript
+            file: /etc/filebeat/netflow-mod-ip.js
+        - dns:
+            type: reverse
+            fields:
+              source.ip: source.domain
+              destination.ip: destination.domain
+        - script:
+            lang: javascript
+            file: /etc/filebeat/netflow-mod-domain.js
